# LexxHard-PowerBoard-Firmware

./: .gitignore  CMakeLists.txt  README.md  custom_targets.json  main.cpp  mbed_app.json  serial_message.hpp  test.cpp
.github/workflows/: main.yml  release.yml
TARGET_LEXXPLUSS_PB01/: CMakeLists.txt  PeripheralPins.c  PinNames.h
docs/: 0_switch_status.json  1_charging_status.json  2_dcdc_bmu.json  3_wheel_disable.json  LTC3891_5V.asc  README.md
